# cbz_in

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: command.rs  convert.rs  error.rs  lib.rs  main.rs  spawn.rs  stats.rs
src/convert/: archive.rs  collection.rs  collections.rs  dir.rs  image.rs  search.rs
test_data/: compressed.jxl  encoded.jxl
tests/: integration.rs
tests/data/: cbz.cbz  encoded.jxl
tests/data/dir/: avif.avif  jxl.jxl
