[package]
name = "cbz_in"
version = "0.1.0"
edition = "2024"
description = "Convert images within comic archives to newer image formats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.16", features = ["derive"] }
signal-hook = "0.3.17"
thiserror = "2.0.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
zip = "2.3.0"
