[package]
name = "cbz_in"
version = "0.1.0"
edition = "2024"
description = "Convert images within comic archives to newer image formats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.16", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display"] }
# exn = "0.3.0"
exn = { git = "https://github.com/MoreDelay/exn", branch = "recovery" }
indicatif = "0.18.3"
signal-hook = "0.3.17"
thiserror = "2.0.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
zip = "2.3.0"
