[package]
name = "cbz_in"
version = "0.1.0"
edition = "2024"
description = "Convert images within comic archives to newer image formats"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# disable some pedantic lints
enum_glob_use = "allow"
match_bool = "allow"
match_same_arms = "allow"

# restiction lints
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn" # alternative: self_names_module_files
needless_raw_strings = "warn"
pathbuf_init_then_push = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
str_to_string = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
derive_more = { version = "2.1.1", features = ["display"] }
# exn = "0.3.0"
exn = { git = "https://github.com/MoreDelay/exn", branch = "recovery" }
# indicatif = "0.18.3"
indicatif = { git = "https://github.com/MoreDelay/indicatif", branch = "responsive-steady-tick" }
signal-hook = "0.3.17"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
zip = "2.3.0"
